Fixed: Jump allowed only when speedY is zero

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ html, body{
 }
 
 body {
-    background-color: black;
+    background-color: #333;
 }
 
 canvas{
